# ExpoBock

./: main.py  pyproject.toml  replit_zip_error_log.txt
static/: comments.json  dataset.json
static/css/: styles.css
templates/: comentarios.html  estoque.html  index.html  template.html
